setup/exercise4/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    workshop: fsi-security
    exercise: "4"
