setup/exercise4/k8s/edge-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-server
  namespace: ${NAMESPACE}
  labels:
    app: edge-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-server
  template:
    metadata:
      labels:
        app: edge-server
    spec:
      containers:
        - name: edge-server
          image: quay.io/smileyfritz/edge-server:0.1.0
          ports:
            - containerPort: 6000
          readinessProbe:
            httpGet:
              path: /health
              port: 6000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 150m
---
apiVersion: v1
kind: Service
metadata:
  name: edge-server
  namespace: ${NAMESPACE}
spec:
  selector:
    app: edge-server
  ports:
    - port: 6000
      targetPort: 6000
