setup/exercise4/k8s/edge-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: edge-server
  namespace: ${NAMESPACE}
  labels:
    app: edge-server
spec:
  to:
    kind: Service
    name: edge-server
  port:
    targetPort: 6000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
